# Freyja

./: .gitignore  .gitmodules  Cargo.toml  README.md
actions/: README.txt  cava.toml  code.toml  example.toml  update.toml
default/: default.txt  weather.txt
english/: ai.yml  botprofile.yml  health.yml
models/: README.txt  config.toml  readme.md
src/: frey_core.rs  main.rs
src/modules/: action.rs  command.rs  config.rs  data.rs  default_answer.rs  mod.rs  volume_control.rs  weather.rs
