[package]
name = "freyja_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
bk-tree = "0.5.0"
colored = "3.0.0"
dirs = "6.0.0"
hound = "3.5.1"
rand = "0.9.1"
regex = "1.11.1"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
whisper-rs = "0.14.3"
wl-clipboard-rs = "0.9.2"
