[package]
name = "freyja_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
dirs = "6.0.0"
hound = "3.5.1"
ollama-rs = "0.3.2"
rand = "0.9.1"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
toml = "0.9.4"
whisper-rs = "0.14.3"
